Se actualizo el Readme y se agrego el tag de la documentacion de la API en el controlador
